--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,6 @@
-## A New Post
-
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+this is the storry 
+test
+**dfhsdfh**
+##why
+1.djfksdf
+2.kdjflsf
