--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,6 @@
+---
+markdown: kramdown
+---
 How to use git flow in your projects
 
 Git is a version management tool and I am a big fan of it. I am hoping you came here for git flow. So you have basics of git in your hands. Again on the same note of good practicies, I think everyone should work on different branches and then keep merging those branches to main branch. But that becomes messy cause generally we forget to create branch. So here is a tool for you.
