--- a/test2.html
+++ b/test2.html
@@ -1,3 +1,8 @@
+---
+layout: post
+category : pages
+tags : [how-to, jekyll]
+---
 ## A New Post
 
 Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
